tdf#107939 Fix case-insensitive filter in Field Dialog

Change-Id: I38e695b43ffa7b213e60993aed3ac1838548b33d